syntax = "proto3";

option csharp_namespace = "net.atos.daf.ct2.accountservice";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc ConnectionStringKey (ConnectionStringRequest) returns (ConnectionStringResponse);
  //rpc ConnectionStringHardCode (ConnectionStringRequest) returns (ConnectionStringResponse);
}  

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message ConnectionStringRequest{
  string Message = 1;
}
message ConnectionStringResponse{
  string Message = 1;
}
